--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </div>
 
     <div class="interface_wrapper">
-      <input class="checkboxes" id="checkbox_controls" type="checkbox" checked><label class="checkboxes_label">詳細設定を表示</label>
-      <input class="checkboxes" id="checkbox_log" type="checkbox" checked><label class="checkboxes_label">認識結果のログを表示</label>
+      <input class="checkboxes control_input" id="checkbox_controls" type="checkbox" checked><label class="checkboxes_label">詳細設定を表示</label>
+      <input class="checkboxes control_input" id="checkbox_log" type="checkbox" checked><label class="checkboxes_label">認識結果のログを表示</label>
       <div class="controls_wrapper control_wrapper_row">
         <div class="col-12 control_wrapper_col">
           <div class="control_header">文字の調整</div>
@@ -64,25 +64,25 @@
               <label for="selector_position" class="control_label">位置</label>
               <div class="control_input">
                 <label for="selector_position_full">
-              <input id="selector_position_full" type="radio" name='selector_position'
-                oninput="document.getElementById('text_overlay_wrapper').className='text_overlay_wrapper full'" checked> 全体
-              </label>
+                  <input id="selector_position_full" type="radio" name='selector_position'
+                  oninput="document.getElementById('text_overlay_wrapper').classList.add('full'), document.getElementById('text_overlay_wrapper').classList.remove('split','right','left','top','bottom')" checked> 全体
+                </label>
                 <label for="selector_position_left">
-              <input id="selector_position_left" type="radio" name='selector_position'
-                oninput="document.getElementById('text_overlay_wrapper').className='text_overlay_wrapper split left'"> 左
-              </label>
+                  <input id="selector_position_left" type="radio" name='selector_position'
+                    oninput="document.getElementById('text_overlay_wrapper').classList.add('split','left'), document.getElementById('text_overlay_wrapper').classList.remove('full','right','top','bottom')"> 左
+                </label>
                 <label for="selector_position_right">
-              <input id="selector_position_right" type="radio"  name='selector_position'
-                oninput="document.getElementById('text_overlay_wrapper').className='text_overlay_wrapper split right'"> 右
-              </label>
+                  <input id="selector_position_right" type="radio"  name='selector_position'
+                    oninput="document.getElementById('text_overlay_wrapper').classList.add('split','right'), document.getElementById('text_overlay_wrapper').classList.remove('full','left','top','bottom')"> 右
+                </label>
                 <label for="selector_position_top">
-              <input id="selector_position_top" type="radio" name='selector_position'
-                oninput="document.getElementById('text_overlay_wrapper').className='text_overlay_wrapper split top'"> 上
-              </label>
+                  <input id="selector_position_top" type="radio" name='selector_position'
+                    oninput="document.getElementById('text_overlay_wrapper').classList.add('split','top'), document.getElementById('text_overlay_wrapper').classList.remove('full','left','right','bottom')"> 上
+                </label>
                 <label for="selector_position_bottom">
-              <input id="selector_position_bottom" type="radio" name='selector_position'
-                oninput="document.getElementById('text_overlay_wrapper').className='text_overlay_wrapper split bottom'"> 下
-              </label>
+                  <input id="selector_position_bottom" type="radio" name='selector_position'
+                    oninput="document.getElementById('text_overlay_wrapper').classList.add('split','bottom'), document.getElementById('text_overlay_wrapper').classList.remove('full','left','right','top')"> 下
+                </label>
               </div>
             </div>
 
@@ -135,20 +135,20 @@
 
             <div class="control_form control_form_selector col-3">
               <label for="select_font" class="control_label">フォント </label>
-              <select id="select_font" onchange="document.getElementById('result_text').style.fontFamily=fonts_custom[select_font.selectedIndex][1]" style="width: 94%; height: 100%;"></select>
+              <select id="select_font" class="control_input" onchange="document.getElementById('result_text').style.fontFamily=fonts_custom[select_font.selectedIndex][1]" style="width: 94%; height: 100%;"></select>
             </div>
 
             <div class="control_form control_form_selector col-2">
               <label for="select_autoclear_text" class="control_label">自動消去 </label>
-              <select id="select_autoclear_text" onchange="updateTextClearSecond()">
-              <option value="0">なし</option>
-              <option value="5">5秒</option>
-              <option value="10">10秒</option>
-              <option value="20">20秒</option>
-              <option value="30" selected>30秒</option>
-              <option value="45">45秒</option>
-              <option value="60">1分</option>
-            </select>
+              <select id="select_autoclear_text" class="control_input" onchange="updateTextClearSecond()">
+                <option value="0">なし</option>
+                <option value="5">5秒</option>
+                <option value="10">10秒</option>
+                <option value="20">20秒</option>
+                <option value="30" selected>30秒</option>
+                <option value="45">45秒</option>
+                <option value="60">1分</option>
+              </select>
             </div>
           </div>
         </div>
@@ -175,7 +175,7 @@
           <div class="control_header">単色背景の調整</div>
           <div class="control_wrapper">
             <div class="control_button_wrapper col-6">
-              <input type="button" id="video_bg_toggle" class="" value="単色背景 表示/非表示" onclick="toggleClass('video_bg','hidden')">
+              <input type="button" id="video_bg_toggle" class="control_input" value="単色背景 表示/非表示" onclick="toggleClass('video_bg','hidden')">
             </div>
             <div class="control_form control_form_color col-5">
               <label for="selector_video_bg" class="control_label">背景色</label>
@@ -185,26 +185,26 @@
         </div>
 
         <div class="control_button_wrapper">
-          <input type="button" value="カメラ 表示/非表示" onclick="toggleClass('result_video','hidden')">
-          <input type="button" value="カメラ 左右反転" onclick="toggleClass('result_video','mirror')">
-          <input type="button" value="文字 表示/非表示" onclick="toggleClass('text_overlay_wrapper','hidden')">
-          <input type="button" value="文字 左右反転" onclick="toggleClass('text_overlay_wrapper','mirror')">
-          <input type="button" value="全画面化ボタン 表示/非表示" onclick="toggleClass('FullScreenBtn','hidden')">
+          <input type="button" value="カメラ 表示/非表示" id="button_camera_display" onclick="toggleClass('result_video','hidden')">
+          <input type="button" value="カメラ 左右反転" id="button_camera_flip" onclick="toggleClass('result_video','mirror')">
+          <input type="button" value="文字 表示/非表示" id="button_text_display" onclick="toggleClass('text_overlay_wrapper','hidden')">
+          <input type="button" value="文字 左右反転" id="button_text_flip" onclick="toggleClass('text_overlay_wrapper','mirror')">
+          <input type="button" value="全画面化ボタン 表示/非表示" id="button_fullscreen_toggle" onclick="toggleClass('FullScreenBtn','hidden')">
           <input type="button" value="設定の初期化" onclick="deleteConfig()">
         </div>
-  
+
         <div class="control_selector_wrapper">
           カメラ：
-          <select id="select_camera" onchange="setupCamera()"></select>
+          <select id="select_camera" class="control_input" onchange="setupCamera()"></select>
         </div>
 
         <div class="control_selector_wrapper">
           音声認識<a href="https://github.com/1heisuzuki/speech-to-text-webcam-overlay#他の言語を認識したい" target="_blank">[?]</a>:
-          <select id="select_language" class="selector" onchange="updateCountry()"></select>
-          <select id="select_dialect" class="selector" onchange="updateLanguage()"></select>
-          <span id="checkbox_hiragana_wrapper" class="selector">
-          ひらがな<a href="https://github.com/1heisuzuki/speech-to-text-webcam-overlay#ひらがなで表示したい" target="_blank">[?]</a>: <input type="checkbox" id="checkbox_hiragana" name="checkbox_hiragana" value="hiragana" oninput="initKuromoji(this)">
-        </span> 翻訳
+          <select id="select_language" class="selector control_input" onchange="updateCountry()"></select>
+          <select id="select_dialect" class="selector control_input" onchange="updateLanguage()"></select>
+          <span id="checkbox_hiragana_wrapper" class="selector control_input">
+            ひらがな<a href="https://github.com/1heisuzuki/speech-to-text-webcam-overlay#ひらがなで表示したい" target="_blank">[?]</a>: <input type="checkbox" id="checkbox_hiragana" class="control_input" name="checkbox_hiragana" value="hiragana" oninput="initKuromoji(this)">
+          </span> 翻訳
           <a href="https://github.com/1heisuzuki/speech-to-text-webcam-overlay#自動で翻訳したい" target="_blank">[?]</a>:
           <div id="google_translate_element" class="select_translation selector"></div>
         </div>
@@ -214,7 +214,7 @@
         <div class="log_control_wrapper help_text">
           *認識結果が確定したタイミングで反映されます。テキストの編集・コピーも可能です。<br/> **認識中にEnterキーを押すと，認識を止めて文を区切ることができます。日本語の場合は文末に句点が付与されます。
           <div class="log_input_wrapper">
-            時刻の記録: <input type="checkbox" id="checkbox_timestamp" name="checkbox_timestamp" value="timestamp">
+            時刻の記録: <input type="checkbox" id="checkbox_timestamp" name="checkbox_timestamp" class="control_input" value="timestamp">
           </div>
         </div>
         <textarea id="result_log" class="result_log_area" onchange="textAreaHeightSet(this)"></textarea><br/>
