--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <input class="checkboxes control_input" id="checkbox_log" type="checkbox" checked><label class="checkboxes_label">認識結果のログを表示</label>
       <div class="controls_wrapper control_wrapper_row">
 
-        <div class="col-12 control_wrapper_col" style="padding-top: 0.8rem;">
+        <div class="col-12 control_wrapper_col" style="padding-top: 0.8rem; padding-bottom: 0.8rem;">
           <div class="control_header">読み上げの設定：</div>
           <input type="checkbox" class="control_input checkbox-input" id="checkbox_voice">
           <label for="checkbox_voice" class="checkbox-label">読み上げのオン／オフ</label>
@@ -51,7 +51,7 @@
           oninput="changeStyle('#speech_for_gcpAPI', 'display', this.checked),changeStyle('#speech_for_browserAPI', 'display', !(this.checked))">
           <label for="checkbox_api" class="checkbox-label">GCP利用のオン／オフ</label>
 
-          <div class="control_voice_wrapper control_wrapper" id="speech_for_gcpAPI">
+          <div class="control_voice_wrapper control_wrapper" id="speech_for_gcpAPI" style="display: none;">
             <div class="control_form control_form_slider col-3">
               <label for="slider_speech_volume_gcp" class="control_label">音量</label>
               <input id="slider_speech_volume_gcp" type="range" class="control_input form-control-range" value="0.0"
@@ -131,8 +131,8 @@
             </div>
           </div>
 
-          <div class="control_header">手動読み上げ：</div>
-          <div class=' control_wrapper'>
+          <div class='control_voice_wrapper control_wrapper'>
+              <div class="control_header">手動読み上げ：</div>
               <textarea id='manual_speech_text' name="manual_speech_text" cols="80" class="form-control"
                 onkeydown="if(event.ctrlKey&&event.keyCode==13){document.getElementById('btn_manual_speech').click();return false};"></textarea>
               <div class="input-group-append">
@@ -152,7 +152,10 @@
           <div class="control_wrapper" style="padding-top: 0.8rem;">
             <div class="control_form control_form_slider col-3">
               <label for="slider_font_size" class="control_label">大きさ</label>
-              <input id="slider_font_size" type="range" class="control_input" value="68" min="1" max="150" step="1" oninput="document.getElementById('result_text').style.fontSize=this.value+'px',document.getElementById('value_font_size').innerHTML=this.value">
+              <input id="slider_font_size" type="range" class="control_input" value="68" min="1" max="150" step="1" oninput="
+              document.getElementById('result_text').style.fontSize=this.value+'px',
+              document.getElementById('value_font_size').innerHTML=this.value,
+              changeStyle('#result_text', 'min-height', calc_result_minHeight(this.value, null, null) + 'px')">
               <div class="control_value">
                 <span id="value_font_size">68</span><span class="value_unit">px</span>
               </div>
@@ -201,18 +204,25 @@
             </div>
 
             <div class="control_form control_form_slider col-3">
-              <label for="slider_text_stroke" class="control_label">フチ</label>
-              <input id="slider_text_stroke" type="range" class="control_input" value="0.3" min="0" max="5" step="0.01" oninput="document.getElementById('result_text').style.webkitTextStrokeWidth=this.value+'px',document.getElementById('value_text_stroke').innerHTML=this.value">
+              <label for="slider_line_height" class="control_label">行間</label>
+              <input id="slider_line_height" type="range" class="control_input" value="163" min="100" max="300" step="1" oninput="
+              document.getElementById('result_text').style.lineHeight=this.value+'%',
+              document.getElementById('value_line_height').innerHTML=this.value,
+              changeStyle('#result_text', 'min-height', calc_result_minHeight(null, this.value, null) + 'px')
+              ">
               <div class="control_value">
-                <span id="value_text_stroke">0.3</span><span class="value_unit">px</span>
+                <span id="value_line_height">163</span><span class="value_unit">%</span>
               </div>
             </div>
 
             <div class="control_form control_form_slider col-3">
-              <label for="slider_line_height" class="control_label">行間</label>
-              <input id="slider_line_height" type="range" class="control_input" value="163" min="100" max="300" step="1" oninput="document.getElementById('result_text').style.lineHeight=this.value+'%',document.getElementById('value_line_height').innerHTML=this.value">
+              <label for="slider_line_bottomup" class="control_label">行位置</label>
+              <input id="slider_line_bottomup" type="range" class="control_input" value="2" min="1" max="10" step="1" oninput="
+              document.getElementById('value_line_bottomup').innerHTML=this.value,
+              changeStyle('#result_text', 'min-height', calc_result_minHeight(null, null, this.value) + 'px')"
+              ">
               <div class="control_value">
-                <span id="value_line_height">163</span><span class="value_unit">%</span>
+                <span id="value_line_bottomup">2</span><span class="value_unit">行</span>
               </div>
             </div>
 
@@ -232,11 +242,6 @@
             <div class="control_form control_form_color col-2">
               <label for="selector_text_shadow_color" class="control_label">影色</label>
               <input id="selector_text_shadow_color" type="color" class="control_input" value="#000000" oninput="document.getElementById('result_text').style.textShadow='0 0 '+document.getElementById('slider_text_shadow_stroke').value+'px '+this.value">
-            </div>
-
-            <div class="control_form control_form_color col-2">
-              <label for="selector_text_stroke_color" class="control_label">フチ色</label>
-              <input id="selector_text_stroke_color" type="color" class="control_input" value="#000000" oninput="document.getElementById('result_text').style.webkitTextStrokeColor=this.value">
             </div>
 
             <div class="control_form control_form_selector col-3">
