フォント追加

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <meta property="og:image" content="https://1heisuzuki.github.io/speech-to-text-webcam-overlay/thumbnail.jpg">
   <meta name="twitter:card" content="summary">
 
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet" charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet" charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet" charset="utf-8">
   <link rel="stylesheet" href="style.css?ver=202104201120" type="text/css" media="screen">
 </head>
 
@@ -88,6 +90,15 @@
                 <option value="ja-JP-Wavenet-B">ja-JP-Wavenet-B</option>
                 <option value="ja-JP-Wavenet-C">ja-JP-Wavenet-C</option>
                 <option value="ja-JP-Wavenet-D">ja-JP-Wavenet-D</option>
+                
+                <option value="en-US-Standard-A">en-US-Standard-A</option>
+                <option value="en-US-Standard-B">en-US-Standard-B</option>
+                <option value="en-US-Standard-C">en-US-Standard-C</option>
+                <option value="en-US-Standard-D">en-US-Standard-D</option>
+                <option value="en-US-Wavenet-A">en-US-Wavenet-A</option>
+                <option value="en-US-Wavenet-B">en-US-Wavenet-B</option>
+                <option value="en-US-Wavenet-C">en-US-Wavenet-C</option>
+                <option value="en-US-Wavenet-D">en-US-Wavenet-D</option>
               </select>
             </div>
             <div class="control_form control_form_selector col-3">
